create github pages

--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-97658535-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-97658535-6');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rsDuqY4li0" once="menu" id="menu2-l">
 
     
@@ -56,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -68,7 +83,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><br>КАК ЗАРАБОТАТЬ В Инстаграм в 2019-ом году</h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-2"><strong>онлайн-вебинар<br>КАК С НУЛЯ ВЫЙТИ НА ПРИБЫЛЬ от 390$ и до 2000$<br><br></strong><br></p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-info display-5" href="index.html#contacts2-22"><span class="mobi-mbri mobi-mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ПРИНЯТЬ УЧАСТИЕ</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-info display-5" href="#bottom"><span class="mobi-mbri mobi-mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ПРИНЯТЬ УЧАСТИЕ</a></div>
             </div>
         </div>
     </div>
@@ -190,7 +205,7 @@
                     </div>          
                     <div class="step-text-content">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Instagram урезает охваты и меняет алгоритмы.</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Instagram - комерческий проект, который сейчас активно монетизируется. В связи с лавинообразным ростом количества желающих распостранить свою информацию, инстаграм пропорционально урезает охват бесплатных публикаций до 10-5%. Статус "подписчик" больше не означает, что этот человек будет видеть ваши посты. И Вам и потенциальному рекламодателю важен охват вашего профиля.</p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Instagram - коммерческий проект, который сейчас активно монетизируется. В связи с лавинообразным ростом количества желающих распостранить свою информацию, инстаграм пропорционально урезает охват бесплатных публикаций до 10-5%. Статус "подписчик" больше не означает, что этот человек будет видеть ваши посты. И Вам и потенциальному рекламодателю важен охват вашего профиля.</p>
                     </div>
                 </div>
             </div>
