--- a/instagram2.html
+++ b/instagram2.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-97658535-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-97658535-6');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rsDuqY4li0" once="menu" id="menu2-1e">
 
     
@@ -55,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header8 cid-rtzw4zEEP5 mbr-parallax-background" id="header8-1i">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="header8 cid-rtzw4zEEP5 mbr-parallax-background" id="header8-1i">
 
     
 
