--- a/vhod.html
+++ b/vhod.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-97658535-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-97658535-6');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rsDuqY4li0" once="menu" id="menu2-1o">
 
     
@@ -55,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header5 cid-rtQQkhwC2M mbr-fullscreen" id="header5-23">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="header5 cid-rtQQkhwC2M mbr-fullscreen" id="header5-23">
 
     
 
