--- a/Email.html
+++ b/Email.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-97658535-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-97658535-6');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rsDuqY4li0" once="menu" id="menu2-20">
 
     
@@ -54,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><section class="mbr-section form1 cid-rtFuIG7KcJ" id="form1-21">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section form1 cid-rtFuIG7KcJ" id="form1-21">
 
     
 
@@ -72,7 +87,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LdDS+Djr4vx18QC4vVQrkYYbXGpoovNpNMFpLJYGnx7R8zayeA2UQAK4D8Eu/f/i4356GrgpYiqdoaNrSQm89QA7vuBP3xz+fkz2Hr6OkFc0Zo4Y/zRJ5TDY5pkbZPJ4">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JHU99zHKkkVF6pVNJxq8bWxj+HOKPjhlspYgNyBMC6tGCaljO8/425HNVD4nSZvIEzfDbkcr7Za1CAbpQ/cuNxK6kdPKPobmuEIWFboZKwsofW3PDD7Qb5iajCxl6Ecf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">ПОЗДРАВЛЯЕМ! ВЫ УСПЕШНО ЗАРЕГИСТРИРОВАЛИСЬ! 
 
