--- a/mashurov.html
+++ b/mashurov.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-97658535-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-97658535-6');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rsDuqY4li0" once="menu" id="menu2-1l">
 
     
@@ -54,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header4 cid-rtDtMqb0pn mbr-parallax-background" id="header4-1n">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="header4 cid-rtDtMqb0pn mbr-parallax-background" id="header4-1n">
 
     
 
