--- a/messenger.html
+++ b/messenger.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-97658535-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-97658535-6');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="header12 cid-rtmtJnOR9h mbr-parallax-background" id="header12-1c">
 
     
@@ -67,7 +82,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
