create github pages

--- a/Email.html
+++ b/Email.html
@@ -70,6 +70,13 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/54088819" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
+<script>
+        (function(w,d,u){
+                var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/60000|0);
+                var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
+        })(window,document,'https://cdn.bitrix24.ua/b7995207/crm/site_button/loader_7_iofbzt.js');
+</script>
+
 <!-- /Google Analytics -->
 
 
@@ -103,7 +110,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section form1 cid-rtFuIG7KcJ" id="form1-21">
+<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section class="mbr-section form1 cid-rtFuIG7KcJ" id="form1-21">
 
     
 
@@ -121,7 +128,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WUJZY3k+vE7cqOx2jgu2IMAA/Sj1r5FFL6xwZmj29bgtkVdaMR491k9OLybh0PM+azy+ut1vrfnp7wYNx8/dAtFbFbOVYNXG82DUHE4elzEI5SxM5UXX6R2oq51iNemZ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XbnNDGqg6+pSgGSP1fHi95OOr4zfzvYCC5nmlHFDYfcgKIhhJEl5yhK4vTMssI4rO+TtHo8tuZtdUxKM3Kuu5B9bXuKM4LN7IP9Kma1LqxnaF7KSfYeAS+5Iyt4S4vCF">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">ПОЗДРАВЛЯЕМ! ВЫ УСПЕШНО ЗАРЕГИСТРИРОВАЛИСЬ! 
 
