create github pages

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -203,34 +203,15 @@
         <div class="user row">
           <div class="col-lg-3 col-md-4">
             <div class="user_image">
-              <img src="assets/images/photo-2019-06-12-12-50-13-300x300.jpg" alt="" title="">
-            </div>
-          </div>
-          <div class="testimonials-caption col-lg-9 col-md-8">
-            <div class="user_text ">
-              <p class="mbr-fonts-style  display-7">Самая большая потребность человеческой природы - это потребность чувствовать свою значимость и быть оцененым по достоинству! - эта цитата Алана Пиза частично илюстрирует тот успех, который превратил приложение для обмена фото в самую популярную социальную сеть с 1,7 млрд. пользователей. Потребность в самовыражении с одной стороны и искренний интерес многомиллионой аудитории с другой стороны превратили Instagram мощнейшую рекламную площадку мира. Как на этом "instaбуме" зарабатывать обычному человеку? - не блогеру, не селебрити! Предприниматель всегда ищет проблему и предлагает ее решение. Наше решение за короткий срок способно круто изменить Вашу жизнь.</p>
-            </div>
-            <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">
-                 Сергей Шевченко</div>
-            <div class="user_desk mbr-light mbr-fonts-style align-left pt-2 display-7">
-                 Предприниматель. Основатель партнерской сети.</div>
-          </div>
-        </div>
-      </div><div class="testimonials-item">
-        <div class="user row">
-          <div class="col-lg-3 col-md-4">
-            <div class="user_image">
               <img src="assets/images/188-kb-1-287x300.jpg" alt="" title="">
             </div>
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
             <div class="user_text ">
-              <p class="mbr-fonts-style  display-7">Instagram действительно удивительное явление, и сегодня это позволяет абсолютно любому человеку воспользоваться возможностями, которые появились благодаря интересу к Instagram со стороны миллионов рекламодателей. Тем более, что этот интерес прямо сейчас смещается в сторону микроинфлюинсеров -&nbsp;обычных юзеров соцсетей с небольшой аудиторией (от тысячи человек), что дает возможность дополнительного зарабатка уже на старте.<br><br></p>
+              <p class="mbr-fonts-style  display-7">Instagram действительно удивительное явление, и сегодня это позволяет абсолютно любому человеку воспользоваться возможностями, которые появились благодаря интересу к Instagram со стороны миллионов рекламодателей. Тем более, что этот интерес прямо сейчас смещается в сторону микроинфлюинсеров - обычных юзеров соцсетей с небольшой аудиторией (от тысячи человек), что дает возможность дополнительного зарабатка уже на старте.</p>
             </div>
-            <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">
-                 Николай Калиниченко</div>
-            <div class="user_desk mbr-light mbr-fonts-style align-left pt-2 display-7">
-                 Предприниматель. Интернет-маркетолог. Консультант.</div>
+            <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">Николай Калиниченко</div>
+            <div class="user_desk mbr-light mbr-fonts-style align-left pt-2 display-7">Предприниматель. Интернет-маркетолог. Консультант.</div>
           </div>
         </div>
       </div></div>
