--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -122,7 +122,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><br>29 июня | 19:00 Киев/МСК<br><br>КАК ЗАРАБОТАТЬ В Инстаграм в 2019-ом году</h1>
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><br>08 июля | 19:00 Киев/МСК<br><br>КАК ЗАРАБОТАТЬ В Инстаграм в 2019-ом году</h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-2"><strong>онлайн-вебинар<br>КАК С НУЛЯ ВЫЙТИ НА ПРИБЫЛЬ от 390$ и до 2000$<br><br></strong><br></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-info display-5" href="#bottom"><span class="mobi-mbri mobi-mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ПРИНЯТЬ УЧАСТИЕ</a></div>
             </div>
@@ -165,7 +165,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/nhtyls-1-436x218.jpg" alt="Mobirise" title="Смотреть видео">  
+                      <img src="assets/images/background1.jpg" alt="Mobirise" title="Смотреть видео">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
